[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
bstr = "1.11.0"
tinyvec = "1.8.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
cast_lossless = "allow"
inline_always = "allow"

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false
