cargo-features = ["profile-rustflags"]
[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
bstr = "1.11.0"
tinyvec = "1.8.0"

[profile.release]
rustflags = ["-C", "target-cpu=native"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
cast_lossless = "allow"
inline_always = "allow"
range_plus_one = "allow"

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false
