cargo-features = ["profile-rustflags"]
[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }

[dependencies]
bstr = "1.11.0"
tinyvec = "1.8.0"

[profile.release]
rustflags = ["-C", "target-cpu=native"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
cast_lossless = "allow"
inline_always = "allow"
range_plus_one = "allow"

[[bench]]
name = "bench_today"
harness = false
